# vins_fusion_pangolin

./: .gitignore  CMakeLists.txt  README.md  how_to_run.txt
camera_models/include/camodocal/calib/: CameraCalibration.h
camera_models/include/camodocal/camera_models/: Camera.h
camera_models/include/camodocal/chessboard/: Chessboard.h
camera_models/include/camodocal/gpl/: EigenUtils.h
camera_models/src/calib/: CameraCalibration.cc
camera_models/src/camera_models/: CameraFactory.cc  CostFunctionFactory.cc  PinholeFullCamera.cc  ScaramuzzaCamera.cc
camera_models/src/chessboard/: Chessboard.cc
camera_models/src/sparse_graph/: Transform.cc
config/kitti_odom/: kitti_config00-02.yaml
examples/: KITTIGPSTest.cpp  stereo_kitti
global_fusion/src/: globalOpt.cpp  globalOpt.h  globalOptNode.cpp
loop_fusion/src/: keyframe.cpp  keyframe.h  parameters.h_bak  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp  viewer.cpp  viewer.h
loop_fusion/src/utility/: utility.h
output/: pose_graph.txt  vio.txt
vins_estimator/src/: KITTIOdomTest.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_alignment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp
vins_estimator/src/utility/: CameraPoseVisualization.h  utility.h  visualization.cpp
